--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "crawler": "^1.3.0",
     "node-fetch": "^2.6.1",
     "request": "^2.88.2",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "sanitize-filename": "^1.6.3"
   }
 }
