--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "crawler": "^1.3.0",
+    "cli-progress": "^3.8.2",
     "node-fetch": "^2.6.1",
+    "puppeteer": "^5.5.0",
     "request": "^2.88.2",
     "rimraf": "^3.0.2",
     "sanitize-filename": "^1.6.3"
